# Snipping-Tool

./: .gitignore  Cargo.toml  README.md
src/: annotations.rs  canvas_to_pixels.rs  color_picker.rs  crop_tool.rs  hotkey.rs  lib.rs  main.rs  modal.rs  platform.rs  styles.rs
tests/: config.config
tests/platform/us_dir_nok/.config/: user_dirs.dirs
tests/platform/us_dir_ok/.config/: user_dirs.dirs
